add link to question author groups

--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -95,7 +95,15 @@
                       <a href="{% url 'del_recurso' 'p' preg.id %}"><span> [quitar] </span></a>
                     {% endif %}
                     <p class="in-line-p"> {{ preg.pregunta }}</p>
-                    <span class="in-line-p"> Sugerido por: {{ preg.autor }}</span>
+                    <span class="in-line-p"> Sugerido por:
+                      {% if preg.grupo_autor %}
+                      <a href="{% url 'ver_grupo' preg.grupo_autor_id %}">
+                        {{ preg.grupo_autor }}
+                      </a>
+                      {% else %}
+                        {{ preg.autor }}
+                      {% endif %}
+                    </span>
                   </p>
                 </li>
               {% endfor %}
@@ -143,7 +151,15 @@
                   <a class="in-line-preg" href="{% url 'admin:teoria_pregunta_change' preg.pk %}" target="_blank">[x]</a>
                 {% endif %}
                 {{ preg.pregunta }}
-                <span class="in-line-preg">Sugerido por: {{ preg.autor }}</span>
+                <span class="in-line-p"> Sugerido por:
+                  {% if preg.grupo_autor %}
+                  <a href="{% url 'ver_grupo' preg.grupo_autor_id %}">
+                    {{ preg.grupo_autor}}
+                  </a>
+                  {% else %}
+                    {{ preg.autor }}
+                  {% endif %}
+                </span>
               </p>
             </li>
             {% endfor %}
