change theory titles

--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -33,7 +33,7 @@
           {% endif %}
         </a>
         <div class="inline-title">
-          <h3>Material de estudio:</h3>
+          <h3>Videos de la unidad:</h3>
           {% if material %}
             <ol class="list-group">
               {% for mat, votos, votado in material %}
@@ -129,7 +129,7 @@
       <div class="row">
         <h2> Otros recursos sugeridos: </h2>
         <div class="col-sm-6">
-          <h3>Material</h3>
+          <h3>Videos</h3>
           {% if material_extra %}
             <ol>
             {% for mat in material_extra %}
