add automatic scroll after switch preguntas

--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="container section">
+    <div class="container section padding-title", id="videos">
       <div class="row">
         <a class="btn-soft inline-title" href="{% url 'add_recurso' 'm' %}">
           {% if staff %}
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <div class="container section">
+    <div class="container section padding-title", id="preguntas">
       <div class="row">
         <a class="btn-soft inline-title" href="{% url 'add_recurso' 'p' %}">
           {% if staff %}
