change save button value

--- a/teoria/templates/teoria/add_recurso.html
+++ b/teoria/templates/teoria/add_recurso.html
@@ -13,8 +13,8 @@
   <div class="container section">
     <form method="POST" class="extended-input">{% csrf_token %}
       {{ material_form.as_p }}
-      <input type="submit" name="save" class="btn-dark" value="Cargar"></input>
-      <input type="submit" name="add" class="btn-dark" value="Cargar y agregar nuevo"></input>
+      <input type="submit" name="save" class="btn-dark" value="Guardar"></input>
+      <input type="submit" name="add" class="btn-dark" value="Guardar y agregar nuevo"></input>
 
     </form>
   </div>
