--- a/clases/templates/clases/ver_tp.html
+++ b/clases/templates/clases/ver_tp.html
@@ -41,7 +41,7 @@
                 </h3>
                 <ul>
                 {% for preg in preg_agrupadas %}
-                  <li>{{preg.pregunta}} <span> Preguntó {{preg.grupo}}</span></li>
+                  <li>{{preg.pregunta}} <span class="span-style"> Preguntó {{preg.grupo}}</span></li>
                 {% endfor %}
                 </ul>
               {% endif %}
