--- a/grupos/templates/grupos/ver_grupo.html
+++ b/grupos/templates/grupos/ver_grupo.html
@@ -140,7 +140,7 @@
                   {% endif %}
                   <p>
                     {{ pregunta }}
-                    <span>
+                    <span class="span-style">
                       {% if exposicion.clase %}
                         {{exposicion.clase}} - TP{{exposicion.tp.numero}} - preguntó {{grupo}}
                       {% else %}
@@ -168,7 +168,7 @@
 
                   <p>
                     {{ pregunta }}
-                    <span>
+                    <span class="span-style">
                       {% if exposicion.clase %}
                         {{exposicion.clase}} - TP{{exposicion.tp.numero}} - preguntó {{grupo}}
                       {% else %}
