--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -42,7 +42,7 @@ a:hover {
   display: inline-block;
 }
 
-span {
+.span-style {
   font-style: italic;
   font-family: monospace;
   color: #2980B9;
