--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -25,6 +25,7 @@
     <script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>
     <script type="text/javascript" src="{% static 'vendor/js/trix.js' %}"></script>
     <script src="{% static 'vendor/js/jquery.tablesorter.js' %}"></script>
+    <script src="{% static 'js/base.js' %}"></script>
 
     <!--boostrap mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
