--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -30,6 +30,9 @@
     <!--boostrap mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% block extra_head %}
+    {% endblock %}
+
   </head>
   <body>
 
