--- a/base/templates/base/home_tres.html
+++ b/base/templates/base/home_tres.html
@@ -102,6 +102,15 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <div class="col-12">
+            <a target="_blank" href="https://drive.google.com/file/d/1lGS_eex4PTJ1IHgAXjFnS_T-GrfKkY8z/view">
+              <div class="row relleno tercio">
+                Planificación de la materia
+              </div>
+            </a>
+        </div>
+      </div>
 
       <hr>
 
